[project]
name = "intuit-rl-envs"
version = "0.1.0"
description = "Six axes of an RL environment — worklog companion repo."
requires-python = ">=3.11"
dependencies = [
  "trl[vllm]==1.5.0",
  "accelerate>=1.4.0",
  "datasets>=4.7.0",
  "transformers>=4.56.2,!=5.1.0",
  "vllm>=0.12.0,<=0.18.0",
  "sentencepiece",
  "modal>=1.3",
]

[tool.uv]
dev-dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*"]
